# opengl-tutorial-vcpkg

./: .gitignore  README.md  heterogenous computing.drawio  opengl-tutorial.sln  vcpkg.json
hello-camera/: CMakeLists.txt  ShaderProgram.cpp  ShaderProgram.h  Texture2D.h  hello-camera.vcxproj  hello-camera.vcxproj.filters  main.cpp
hello-camera/shaders/: basic.frag  basic.vert
hello-imgui/: CMakeLists.txt  Camera.cpp  Mesh.cpp  Mesh.h  ShaderProgram.cpp  Texture2D.h  hello-imgui.vcxproj  hello-imgui.vcxproj.filters  imgui.ini  main.cpp  vcpkg.json
hello-imgui/models/: woodcrate.mtl
hello-imgui/shaders/: lighting_blinn-phong.vert  lighting_dir.frag  lighting_dir.vert  lighting_dir_point_spot.frag  lighting_dir_point_spot.vert  lighting_phong.frag  lighting_phong.vert  lighting_phong_materials.frag  lighting_phong_materials.vert  lighting_point.frag  lighting_point.vert  lighting_spot.frag  lighting_spot.vert  skybox.vert
hello-lighting/: CMakeLists.txt  Mesh.cpp  Skybox.h  hello-lighting.vcxproj  hello-lighting.vcxproj.filters  main.cpp  vcpkg.json
hello-lighting/models/: crate.mtl
hello-lighting/shaders/: basic.vert  bulb.vert  lighting_blinn-phong.frag  lighting_blinn-phong.vert  lighting_dir_point_spot.frag  lighting_phong.frag  lighting_phong.vert  lighting_phong_materials.frag  lighting_point.frag  lighting_point.vert
hello-object/: CMakeLists.txt  Camera.h  Mesh.cpp  Mesh.h  Texture2D.cpp  hello-object.vcxproj  hello-object.vcxproj.filters  main.cpp  vcpkg.json
hello-object/shaders/: basic.frag  basic.vert  skybox.frag  skybox.vert
hello-opengl/: CMakeLists.txt  hello-opengl.vcxproj  main.cpp
hello-shader/: CMakeLists.txt  ShaderProgram.cpp  ShaderProgram.h  hello-shader.vcxproj  hello-shader.vcxproj.filters  main.cpp  vcpkg.json
hello-shader/shaders/: basic.frag  basic.vert
hello-shadow/: CMakeLists.txt  Camera.h  Mesh.cpp  ShaderProgram.cpp  ShaderProgram.h  Skybox.cpp  hello-shadow.vcxproj  hello-shadow.vcxproj.filters  main.cpp
hello-shadow/models/: barrel.mtl  light.mtl
hello-shadow/shaders/: bulb.frag  bulb.vert  lighting_blinn-phong.frag  lighting_blinn-phong.vert  lighting_phong.vert  shadow.frag  shadow.vert  skybox.frag
hello-skybox/: CMakeLists.txt  Camera.cpp  Camera.h  ShaderProgram.cpp  Texture2D.cpp  Texture2D.h  hello-skybox.vcxproj  hello-skybox.vcxproj.filters  main.cpp
hello-skybox/shaders/: basic.frag  basic_part2.frag
hello-texture/: CMakeLists.txt  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  hello-texture.vcxproj  hello-texture.vcxproj.filters  main.cpp  vcpkg.json
hello-texture/shaders/: basic.vert  basic_part1.frag
hello-triangle/: CMakeLists.txt  hello-triangle.vcxproj  main.cpp  vcpkg.json
